--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.4",
+    "gray-matter": "^4.0.3",
+    "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
-    "@types/node": "16.11.11",
+    "@types/node": "17.0.2",
     "@types/react": "17.0.37",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4",
-    "typescript": "4.5.2"
+    "eslint": "8.5.0",
+    "eslint-config-next": "12.0.7",
+    "npm-check-updates": "^12.0.5",
+    "typedoc": "^0.22.10",
+    "typescript": "4.5.4"
   }
 }
