--- a/package.json
+++ b/package.json
@@ -5,23 +5,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check-update": "ncu -u"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
-    "next": "12.0.7",
+    "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1"
   },
   "devDependencies": {
-    "@types/node": "17.0.2",
-    "@types/react": "17.0.37",
-    "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7",
-    "npm-check-updates": "^12.0.5",
-    "typedoc": "^0.22.10",
-    "typescript": "4.5.4"
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@types/node": "17.0.18",
+    "@types/react": "17.0.39",
+    "eslint": "8.9.0",
+    "eslint-config-next": "12.1.0",
+    "jest": "^27.5.1",
+    "npm-check-updates": "^12.3.1",
+    "typescript": "4.5.5"
   }
 }
